@@ -41,7 +41,7 @@ getJavaSpecificOpts() {
           --add-modules=java.xml.bind \
           ${current_value}"
 
-  elif [ "${version}" -ge 11 ] && [ "${version}" -lt 15 ]; then
+  elif [ "${version}" -ge 11 ] && [ "${version}" -lt 14 ]; then
       value="\
           --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
           --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
@@ -52,8 +52,21 @@ getJavaSpecificOpts() {
           --illegal-access=permit \
           ${current_value}"
 
+  elif [ "${version}" -ge 14 ] && [ "${version}" -lt 15 ]; then
+        value="\
+            --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
+            --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
+            --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
+            --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
+            --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
+            --add-opens=java.base/jdk.internal.access=ALL-UNNAMED \
+            --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED \
+            --illegal-access=permit \
+            ${current_value}"
+
   elif [ "${version}" -ge 15 ] ; then
       value="\
+          --add-opens=java.base/jdk.internal.access=ALL-UNNAMED \
           --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED \
           --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
           --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
